--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,9 +1,15 @@
 analyzer:
   plugins:
     - custom_lint
+  exclude:
+    - packages/
+    - lib/routes.g.dart
+    - lib/theme.dart
+  
 
 include: package:flutter_lints/flutter.yaml
 
 linter:
   rules:
+   
    
