--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,9 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   google_fonts: 6.1.0
-  flutter_riverpod: ^2.5.1
+  otp: ^3.1.4
+  hooks_riverpod: ^2.5.1
+  flutter_hooks: ^0.19.0
   riverpod_annotation: ^2.3.5
 
 dev_dependencies:
